--- a/source/MarkMims-resume.html
+++ b/source/MarkMims-resume.html
@@ -60,29 +60,50 @@ table.referees { width: 60%; margin-top: 0cm; margin-bottom: 0cm;}
 .urlA { font-family:sans-serif; color:red; }
 
 </style><meta name="keywords" content="OpenGL, SVR4"></head><body><div class="resume"><div class="header"><h1 class="nameHeading">Mark M. Mims, Ph.D.</h1><p>Email: <a href="mailto:mark.mims@gmail.com">mark.mims@gmail.com</a><br>URL: <a href="http://www.markmims.com/">http://www.markmims.com/</a><br></p></div><ul><li class="achievement">
-        Experienced Data Scientist
+        Data Scientist / Data Engineer
       </li><li class="achievement">
         Developer on the Ubuntu Server Team
       </li><li class="achievement">
         Private &amp; Hybrid Cloud and Cloud Application Architect
       </li><li class="achievement">
-        Enterprise Experience (Chief Architect for $30MM J2EE project in the Energy Industry)
-      </li><li class="achievement">
         Entrepreneurial Experience (Data Science and DevOps Consulting)
       </li><li class="achievement">
+        Enterprise Experience (Chief Architect for $30MM J2EE project in the Energy Industry)
+      </li><li class="achievement">
         Ph.D. Physics - Quantum Computation
-      </li></ul><h2 class="heading"><span class="headingText">Employment History</span></h2><p class="job"><span class="jobTitle">Software Engineer - Ubuntu Server Team</span><br><span class="employer"><a class="linkA" href="http://www.canonical.com/">Canonical Ltd.</a></span><span class="location"> (Logan / UK)</span><br>2011-Present</p><div class="jobDescription"><p class="para">
+      </li></ul><h2 class="heading"><span class="headingText">Employment History</span></h2><p class="job"><span class="jobTitle">Principal Engineer</span><br><span class="employer"><a class="linkA" href="http://svds.com/">Silicon Valley Data Science</a></span><span class="location"> (Mountainview)</span><br>2014-Present</p><div class="jobDescription"><p class="para">
+          Data science consulting.
+        </p></div><p class="job"><span class="jobTitle">Visiting Scholar</span><br><span class="employer"><a class="linkA" href="http://physics.usu.edu/">Department of Physics, Utah State University</a></span><span class="location"> (Logan)</span><br>2012-Present</p><div class="jobDescription"><p class="para">
+          Research in data management and data modeling.
+        </p><p class="para">
+          Interested in data plumbing and the toolchains surrounding data science pipelines and how they effect subsequent results at various scales.  Working to apply Test-Driven and Behavior-Driven Software Development techniques to data science pipelines as "Sanity-Driven Data Science."
+        </p></div><p class="job"><span class="jobTitle">Principal Data Architect</span><br><span class="employer"><a class="linkA" href="http://www.infochimps.com/">Infochimps</a>,
+        now
+        <a class="linkA" href="http://www.csc.com/">Computer Sciences Corporation (CSC) - Big Data &amp; Analytics</a></span><span class="location"> (Austin / Falls-Church)</span><br>2013-2014</p><div class="jobDescription"><p class="para">
+          Built managed data science pipelines for the enterprise.
+        </p><p class="para">
+          Infochimps, rebranded as CSC's Big Data and Analytics (BD&amp;A)
+          Group, provides a wide range of fully managed data science and
+          analytics services for the enterprise.  My primary accomplishment
+          here was driving work to adapt the Infochimps cloud-based products
+          over to "dedicated rack" openstack-based solutions to meet the data
+          pipeline needs of CSC's enterprise customers.
+        </p><p class="para">
+          As the Principal Data Architect, my contributions included:
+        </p><ul><li class="achievement"><strong class="emphasis">Product development</strong> - Worked with a team of architects and product leads to define the actual product offerings, then communicate these offerings to sales and marketing teams.  Helped build tools to simplify pricing and hardware configuration
+          </li><li class="achievement"><strong class="emphasis">Solution architecture</strong> - Brought in to pinch-hit infrastructure and architecture with customers.  Built service deployments for large insurance and financial services organizations... including quite popular telemetry based data pipelines within the insurance industry
+          </li><li class="achievement"><strong class="emphasis">Infochimps platform architecture</strong> - Worked alongside an incredibly talented development team to refactor and adapt the Infochimps architecture to integrate with other CSC acquisitions and meet the data pipeline needs CSC's customer base
+          </li><li class="achievement"><strong class="emphasis">Development planning</strong> - Worked with the development team to help capture and translate requirements into actionable projects/tasks and help schedule and prioritize these for development
+          </li><li class="achievement"><strong class="emphasis">Ops process development</strong> - Helped the infochimps ops team through the training, process development, and tooling needed to adapt to ops challenges of hybrid public/private cloud managed services
+          </li><li class="achievement"><strong class="emphasis">Devops development</strong> - Helped develop tools around RH-OSP Foreman-based Openstack deployments and integrated what were primarily chef-based infochimps platform component workloads
+          </li></ul><p class="para">
+          Ultimately responsible for all tooling and process to support production rollout and lifecycle for dedicated-rack BD&amp;A product installs.
+        </p></div><p class="job"><span class="jobTitle">Software Engineer - Ubuntu Server Team</span><br><span class="employer"><a class="linkA" href="http://www.canonical.com/">Canonical Ltd.</a></span><span class="location"> (London)</span><br>2011-2013</p><div class="jobDescription"><p class="para">
           Building DevOps tools for Ubuntu Server.
         </p><p class="para">
           Part of the team working to build Juju, a new suite of DevOps tools for Ubuntu Server. Developing juju charms to orchestrate various services throughout the enterprise. Designing / developing APIs and tools surrounding the juju DevOps stack. Integrate / test deployments on LXC, bare metal-as-a-service (MaaS) as well as EC2 and OpenStack cloud infrastructures.
         </p><p class="para">
           Implement data-intensive service stacks and using Juju to capture, test, and model data science pipelines.
-        </p></div><p class="job"><span class="jobTitle">Visiting Scholar</span><br><span class="employer"><a class="linkA" href="http://physics.usu.edu/">Department of Physics, Utah State University</a></span><span class="location"> (Logan)</span><br>2012-Present</p><div class="jobDescription"><p class="para">
-          Research in data management and data modeling.
-        </p><p class="para">
-          Particularly interested in data plumbing and the toolchains surrounding data science pipelines and how they effect subsequent results at various scales.
-        </p><p class="para">
-          Helping define curricula for data science tracks within various departments in universities across the US.
         </p></div><p class="job"><span class="jobTitle">Cloud Architect</span><br><span class="employer"><a class="linkA" href="http://www.archethought.com/">Archethought</a></span><span class="location"> (Austin / Boulder)</span><br>2010-2011</p><div class="jobDescription"><p class="para">
           Building private and hybrid clouds and cloud applications for universities.
         </p><p class="para">
@@ -181,7 +202,7 @@ table.referees { width: 60%; margin-top: 0cm; margin-bottom: 0cm;}
           2000 using MFC/ATL/COM plugins in C++.
         </p><p class="para">
           Technology Used:
-          <p><span class="skillSetTitle"></span><span class="skills">Java, C#, C++, J2EE Design/Development, .NET, Business modeling, MFC, ATL, COM, Tibco, SQLServer 2000 with Analysis Services, Enterprise Hardware (Compaq/HP) running Windows 2000 Server, Windows 2003 Server, Red Hat 9 and Fedora Core 2-3, Microsoft SharePoint, Linux.</span></p></p></div><p class="job"><span class="jobTitle">Lead Software Architect</span><br><span class="employer"><a class="linkA" href="http://www.aegistg.com/">The AEgis Technologies Group, Inc.</a></span><span class="location"> (Austin)</span><br>2000-2002</p><div class="jobDescription"><p class="para"> 
+          <p><span class="skillSetTitle"></span><span class="skills">Java, C#, C++, J2EE Design/Development, .NET, Business modeling, MFC, ATL, COM, Tibco, SQLServer 2000 with Analysis Services, Enterprise Hardware (Compaq/HP) running Windows 2000 Server, Windows 2003 Server, Red Hat 9 and Fedora Core 2-3, Microsoft SharePoint, Linux.</span></p></p></div><p class="job"><span class="jobTitle">Lead Software Architect</span><br><span class="employer"><a class="linkA" href="http://www.aegistg.com/">The AEgis Technologies Group, Inc.</a></span><span class="location"> (Austin / Huntsville)</span><br>2000-2002</p><div class="jobDescription"><p class="para"> 
           Building IDEs for Simulation Engineers.
         </p><p class="para"> 
           Principal architect of AEgis' AcslXtreme(TM)
@@ -235,10 +256,6 @@ table.referees { width: 60%; margin-top: 0cm; margin-bottom: 0cm;}
           Technology Used:
           <p><span class="skillSetTitle"></span><span class="skills">C/C++, Tcl/Tk, UNIX and Win32 systems programming, (soft) real-time process scheduling/event management, resource conflict resolution/management, network programming using TCP/IP and NetBIOS, Silicon Graphics O_2, Onyx Reality Engine, and Onyx2 Infinite Reality high-end graphics systems running IRIX(UNIX), i386 hardware running Linux, Win95, NT-4.0, and an in-house real-time OS over DOS/4GW.</span></p></p></div><p class="job"><span class="jobTitle">Instructor</span><br><span class="employer">Dept. of Physics - UT Austin</span><span class="location"> (Austin)</span><br>1994-2000</p><div class="jobDescription"><p class="para">
           Physical Science I: Mechanics (AI, Instructor of Record)
-        </p><p class="para">
-          Lab for Engineering Physics I (TA)
-        </p><p class="para">
-          Lab for General Physics II (TA)
         </p></div><p class="job"><span class="jobTitle">Lecturer</span><br><span class="employer">Austin Community College</span><span class="location"> (Austin)</span><br>1995-1996</p><div class="jobDescription"><p class="para">
           Intro to General Physics I
         </p><p class="para">
