--- a/source/about.html
+++ b/source/about.html
@@ -5,6 +5,40 @@ layout: default
 <div>
   <article>
     <div id='bio'>
+
+      <h2>Summary</h2>
+
+      <p>I'm a Data Plumber. I spend most days designing/tuning/fixing/banging-on data pipelines and the infrastructure behind data-intensive applications of all sorts. I love what I do!</p>
+
+      <p>Originally trained as a Physicist (Ph.D. researching how quantum computers can learn to tolerate noise and errors), I've since had an incredible career out in the world where Data Science meets DevOps and infrastructure engineering.</p>
+
+      <p>I've been lucky enough to work for companies like Canonical, the folks behind the Ubuntu operating system, Infochimps, Silicon Valley Data Science, and now DigitalOcean. Places where talented teams of people are innovating and leading open-source communities and the tech industry as a whole.</p>
+
+      <p>I've been a consultant for a lot of my career, which gives me great insight into a vast range of data-related problems people have as well as how to help solve these problems across industries and technology stacks.</p>
+
+      <p>My Particular passions at the moment include:</p>
+
+      <ul>
+        <li>training data scientists. I'm building a class that's essentially "Just enough data engineering" for data scientists in Berkeley's MIDS program and I can't wait to start teaching it Fall 2017</li>
+        <li>adopting test-driven methodologies into building data pipelines... keeping pipelines strongly connected to the actual problems that need to be solved</li>
+        <li>and then pretty much anything to do with AI in infrastructure automation :-)</li>
+      </ul>
+
+      <p>Accomplishments at a glance:</p>
+
+      <dl>
+        <dt>Data:</dt>
+        <dd>Built data pipelines in: Retail, Energy, Insurance, Education, and Entertainment industries</dd>
+
+        <dt>Cloud:</dt>
+        <dd>Private, and Hybrid Cloud Architect</dd>
+        <dd>Cloud Application Architect</dd>
+        <dd>Developer on the Ubuntu Server Team</dd>
+
+        <dt>Math:</dt>
+        <dd>Ph.D. Mathematical Physics - Quantum Computation</dd>
+      </dl>
+
       <p>
         Hi, I'm Mark... a software developer and a physics geek.
       </p>
@@ -66,19 +100,6 @@ layout: default
 
       <br/>
 
-      <dl>
-        <dt>
-          Code:
-        </dt>
-        <dd>
-          <a href="http://github.com/mmm">GitHub</a>
-        </dd>
-        <dd>
-          <a href="http://launchpad.net/~mark-mims/">LaunchPad</a>
-        </dd>
-      </dl>
-
-      <br/>
 
       <dl>
         <dt>
@@ -102,6 +123,35 @@ layout: default
       </dl>
 
       <br/>
+
+      <dl>
+        <dt>
+          Code:
+        </dt>
+        <dd>
+          <a href="http://github.com/mmm">GitHub</a>
+        </dd>
+        <dd>
+          <a href="http://launchpad.net/~mark-mims/">LaunchPad</a>
+        </dd>
+      </dl>
+
+      <br/>
+
+      <dl>
+        <dt>
+          Resume:
+        </dt>
+        <dd>
+        <a href="/MarkMims-resume.html" title="Resume for Mark Mims">html</a>
+        </dd>
+        <dd>
+        <a href="/MarkMims-resume.txt" title="Resume for Mark Mims">text</a>
+        </dd>
+        <dd>
+        <a href="/MarkMims-resume.pdf" title="Resume for Mark Mims">pdf</a>
+        </dd>
+      </dl>
 
       <div id='mugshot'>
         <img alt="Mug" src="/images/phonebooth.jpg"/>
