fixing about page

--- a/source/about.html
+++ b/source/about.html
@@ -18,14 +18,12 @@ layout: default
 
       <p>I've been lucky enough to work for companies like Canonical, the folks behind the Ubuntu operating system, Infochimps, Silicon Valley Data Science, and now DigitalOcean. Places where talented teams of people are innovating and leading open-source communities and the tech industry as a whole.</p>
 
-      <p>I've been a consultant for a lot of my career, which gives me great insight into a vast range of data-related problems people have as well as how to help solve these problems across industries and technology stacks.</p>
-
-      <p>My Particular passions at the moment include:</p>
+      <p>My passions at the moment include:</p>
 
       <ul>
-        <li>training data scientists. I'm building a class that's essentially "Just enough data engineering" for data scientists in Berkeley's MIDS program and I can't wait to start teaching it Fall 2017</li>
+        <li>training data scientists. I teach and helped build a "Just enough data engineering" class for data scientists in Berkeley's online Master's (MIDS) program</li>
         <li>adopting test-driven methodologies into building data pipelines... keeping pipelines strongly connected to the actual problems that need to be solved</li>
-        <li>and then pretty much anything to do with AI in infrastructure automation :-)</li>
+        <li>and I'm actually <em>paid</em> to work on AI for infrastructure automation at DO!  I know... right!? :-)</li>
       </ul>
 
 
