--- a/source/about.html
+++ b/source/about.html
@@ -21,8 +21,8 @@ layout: default
       <p>My passions at the moment include:</p>
 
       <ul>
-        <li>training data scientists. I teach an online class that's essentially "Just enough data engineering" for data scientists in Berkeley's MIDS program</li>
-        <li>adopting test-driven methodologies into building data pipelines... keeping pipelines strongly connected to the actual problems that need to be solved</li>
+        <li>Training data scientists. I teach an online class that's essentially "Just enough data engineering" for data scientists in Berkeley's MIDS program</li>
+        <li>Adopting test-driven methodologies into building data pipelines... keeping pipelines strongly connected to the actual problems that need to be solved</li>
         <li>and then pretty much anything to do with AI in infrastructure automation</li>
       </ul>
 
