--- a/source/about.html
+++ b/source/about.html
@@ -34,29 +34,40 @@ layout: default
           Social:
           <ul>
             <li>
-              <a href="http://twitter.com/m_3/">Twitter</a>
+              <a href="http://twitter.com/m_3/">
+                <img src="/images/twitter.svg" width="100px" />
+              </a>
             </li>
             <li>
-              <a href="http://www.linkedin.com/in/markmmims">LinkedIn</a>
+              <a href="http://www.linkedin.com/in/markmmims">
+                <img src="/images/linkedin.svg" width="100px" />
+              </a>
             </li>
             <li>
-              <a href="https://www.facebook.com/mark.mims">Facebook</a>
+              <a href="https://www.facebook.com/mark.mims">
+                <img src="/images/facebook.svg" width="100px" />
+              </a>
             </li>
             <li>
-              <a href="http://about.me/m_3/">AboutMe</a>
+              <a href="http://about.me/m_3/">
+                <img src="/images/about-dot-me.svg" width="100px" />
+              </a>
             </li>
             <li>
-              <a href="mailto:mark.mims@gmail.com">mark.mims@gmail.com</a>
-            </li>
-            <li>
-              <a href="callto:+1-512-981-6467">voice:+1(512)981-6467</a>
+              <a href="mailto:mark.mims@gmail.com">
+                <img src="/images/gmail.svg" width="100px" />
+              </a>
             </li>
           </ul>
 
           <br/>
           Keys:
           <ul>
-            <li><a href="https://keybase.io/m_3">Keybase</a></li>
+            <li>
+              <a href="https://keybase.io/m_3">
+                <img src="/images/keybase.svg" width="100px" />
+              </a>
+            </li>
             <li>
               <a href="/MarkMims-gpg-key.asc" title="fingerprint = C14D 0796 664C 62F9 C104  C149 F213 1D81 237F D12C">GPG public key</a>
               (
@@ -74,8 +85,16 @@ layout: default
           <br/>
           Code:
           <ul>
-            <li><a href="http://github.com/mmm">GitHub</a></li>
-            <li><a href="http://launchpad.net/~mark-mims/">LaunchPad</a></li>
+            <li>
+              <a href="http://github.com/mmm">
+                <img src="/images/github.svg" width="100px" />
+              </a>
+            </li>
+            <li>
+              <a href="http://launchpad.net/~mark-mims/">
+                <img src="/images/launchpad.svg" width="100px" />
+              </a>
+            </li>
           </ul>
 
           <br/>
