updated old bio stuff

--- a/source/MarkMims-resume.html
+++ b/source/MarkMims-resume.html
@@ -98,18 +98,32 @@ color: #A6A6A6;
 <p>I’m a Data Plumber. I spend most days designing/tuning/fixing/banging-on data pipelines and the infrastructure behind data-intensive applications of all sorts.</p>
 <p>Originally trained as a Physicist (Ph.D. researching how quantum computers can learn to tolerate noise and errors), I’ve since had an incredible career out in the world where Data Science meets DevOps and infrastructure engineering.</p>
 <p>I’ve been lucky enough to work for companies like Canonical, the folks behind the Ubuntu operating system, Infochimps, DigitalOcean, and now Google. Places where talented teams of people are innovating and leading open-source communities and the tech industry as a whole.</p>
-<h2 id="current-passions">Current Passions</h2>
+<h3 id="current-passions">Current Passions</h3>
 <ul>
-<li><p>training data scientists. I teach an online class that’s essentially “Just enough data engineering” for data scientists in Berkeley’s Data Science Masters (MIDS) Program</p></li>
-<li><p>adopting test-driven methodologies into building data pipelines… keeping pipelines strongly connected to the actual problems that need to be solved</p></li>
-<li><p>and then pretty much anything to do with AI in infrastructure automation :-)</p></li>
+<li><p>Scientific AI/ML. Using various deep or hybrid models to accelerate scientific high-performance computing (HPC) workloads</p></li>
+<li><p>Operationalizing AI. MLOps and test-driven approaches to the data pipelines used to develop, train, and serve AI models in production environments</p></li>
+</ul>
+<h3 id="past-obsessions">Past Obsessions</h3>
+<ul>
+<li><p>Training data scientists. I teach an online class that’s essentially “Just enough data engineering” for data scientists in Berkeley’s Data Science Masters (MIDS) Program</p></li>
+<li><p>Adopting test-driven methodologies into building data pipelines… keeping pipelines strongly connected to the actual business problems that need to be solved</p></li>
+<li><p>and then pretty much anything to do with AI in infrastructure automation</p></li>
 </ul>
 <h2 id="experience">Experience</h2>
 <dl>
 <dt>2019-Present</dt>
 <dd><p><strong>Staff Solutions Architect</strong><br />
-<em>Google</em> (Boulder)</p>
+<em>Google</em> (Mountain View)</p>
 <p>Helping users develop solutions on the Google Cloud Platform.</p>
+<p>Working with Google Cloud users and teams throughout Google:</p>
+<ul>
+<li><p><em>SARS-Covid-2 Research Support</em> - Representing Google as a rotating reviewer for the Covid-19 High Performance Computing Consortium:</p>
+<blockquote>
+<p>“Bringing together the Federal government, industry, and academic leaders to provide access to the world’s most powerful high-performance computing resources in support of COVID-19 research”</p>
+</blockquote></li>
+<li><p><em>Data Engineering / BigData</em> - Helping users build data intensive applications on Google Cloud</p></li>
+<li><p><em>Scientific AI/ML</em> - Helping users accelerate scientific workloads on Google Cloud</p></li>
+</ul>
 </dd>
 <dt>2017-Present</dt>
 <dd><p><strong>Lecturer</strong> - Master of Information and Data Science (MIDS)<br />
@@ -118,9 +132,17 @@ color: #A6A6A6;
 <p>I currently teach and serve as Course Lead for this online course.</p>
 </dd>
 <dt>2017-2019</dt>
-<dd><p><strong>Staff Engineer</strong> - Data &amp; Analytics<br />
+<dd><p><strong>Staff Engineer</strong><br />
 <em>DigitalOcean</em> (New York)</p>
-<p>AI-guided infrastructure at DO… Helping build better cloud services for DigitalOcean users!</p>
+<p>AI-guided infrastructure at DO… Helping build better cloud services for DigitalOcean users.</p>
+<p>DigitalOcean is a public cloud provider popular with developers around the world.</p>
+<p>As a Staff Engineer, I worked with teams across the company:</p>
+<ul>
+<li><p><em>Research &amp; Development</em> - Spearheaded work to build OpenAI-compatible <em>infrastructure gyms</em> that could be used to train reinforcement learning agents to intelligently manipulate cloud infrastructure components. TensorFlow models use Prometheus-augmented Terraform graphs (usually flattened to vectors at first for simplicity) to interact with infrastructure using Kubernetes APIs as well as various cloud provider APIs</p></li>
+<li><p><em>Engineering</em> - Built and maintained <em>Machine Learning OneClick</em> images that include a curated list of AI and ML tools for data scientists</p></li>
+<li><p><em>Data Engineering</em> - Helped the Data Engineering team adopt SRE practices to automate, maintain, and scale low-latency, high-throughput data analytics pipelines. These pipelines ingested billions of events per day using Kafka, Spark, Cassandra, Hadoop, Presto, and Looker all running on Mesos and orchestrated by Airflow. Helped to port some of the simpler Spark-based workflows to Golang. Also helped support various query cache and data warehouse / marketplace buildouts</p></li>
+<li><p><em>Data Science</em> - Helped the Data Science team build and refine models in efforts to understand user churn and automatically identify and signal fraudulent behavior. We also helped provide quantitative decision support for new product development efforts across the company</p></li>
+</ul>
 </dd>
 <dt>2014-2017</dt>
 <dd><p><strong>Principal Engineer</strong><br />
