fonts and licensing

--- a/source/about.html
+++ b/source/about.html
@@ -28,7 +28,7 @@ layout: default
       <p>Past Obsessions include:</p>
 
       <ul>
-        <li>Training data scientists. I teach an online class that's essentially "Just enough data engineering" for data scientists in Berkeley's MIDS program</li>
+        <li>Training data scientists. I co-created and taught a core course, <it>Fundamentals of Data Engineering</it>, for data scientists in Berkeley's MIDS program</li>
         <li>Adopting test-driven methodologies into building data pipelines... keeping pipelines strongly connected to the actual problems that need to be solved</li>
         <li>and then pretty much anything to do with AI in infrastructure automation</li>
       </ul>
